fix: swagger to generate client
