# swagger.yml
@@ -1,6 +1,6 @@
 basePath: /
 consumes:
-- applictaion/json
+- application/json
 definitions:
   GenericError:
     description: GenericError is a generic error message returned by a server
@@ -57,11 +57,8 @@ definitions:
     type: object
     x-go-package: github.com/kzvonov/learning-go/handlers
 info:
-  description: |-
-    Document for Product API
-
-    Schemas: http
-  title: on Product API
+  description: Documentation for Product API
+  title: of Product API
   version: 1.0.0
 paths:
   /products:
@@ -94,6 +91,45 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+  /products/{id}:
+    delete:
+      description: 'Returns: a list of products'
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: getProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
     put:
       description: Update a products details
       operationId: updateProduct
@@ -120,15 +156,6 @@ paths:
           $ref: '#/responses/errorResponse'
         "422":
           $ref: '#/responses/errorValidation'
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      description: 'Returns: a list of products'
-      operationId: deleteProduct
-      responses:
-        "201":
-          $ref: '#/responses/noContent'
       tags:
       - products
 produces:
